--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
-<header>Andreflix</header>Andreflix
+<html lang="pt-BR">
+<head>
+    <link rel="stylesheet" href="styles.css">
+    <titlo>Andreflix</titlo>
+</head>
 
+<body>
+    <header>Andreflix</header>Andreflix
 
-<h1>RESUMO DE JUJUTSU KAISEN COMPLETO!</h1>
-<p>#jujutsu-kaisen</p>
+    <section>
+        <div>
+            <h1>RESUMO DE JUJUTSU KAISEN COMPLETO!</h1>
+            <p>#jujutsu-kaisen</p>
+        </div>
 
+         <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/qFvXItKwcds?si=WpZObV87LGdO_Cn3" 
+            title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
 
+</body> 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/qFvXItKwcds?si=WpZObV87LGdO_Cn3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</html>
