--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="pt-BR">
 <head>
     <link rel="stylesheet" href="styles.css">
-    <titlo>Andreflix</titlo>
+    <title>Aluraflix</title>
 </head>
 
 <body>
