--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="pt-BR">
 <head>
     <link rel="stylesheet" href="styles.css">
-    <title>Aluraflix</title>
+    <title>Andreflix</title>
 </head>
 
 <body>
@@ -13,14 +13,14 @@
             <p>#jujutsu-kaisen</p>
         </div>
 
-         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/qFvXItKwcds?si=WpZObV87LGdO_Cn3" 
-            title="YouTube video player" frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/qFvXItKwcds?si=WpZObV87LGdO_Cn3"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
-</body> 
+</body>
 
 </html>
