--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header>Andreflix</header>
 
     <section>
-        <div>
+        <div class="chamada-texto">
             <h1>RESUMO DE JUJUTSU KAISEN COMPLETO!</h1>
             <p>#jujutsu-kaisen</p>
         </div>
