--- a/index.html
+++ b/index.html
@@ -13,19 +13,41 @@
 <body>
     <header>Andreflix</header>
 
-    <section>
+    <section class="chamada">
         <div class="chamada-texto">
             <h1>RESUMO DE JUJUTSU KAISEN COMPLETO!</h1>
             <p>#jujutsu-kaisen</p>
         </div>
+    </section>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/qFvXItKwcds?si=WpZObV87LGdO_Cn3"
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=SSFkyEdpfwM"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
+
+    <section class="categoria">
+        <h2>Filmes e séries</h2>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/embed/SSFkyEdpfwM?si=SDkq0jcLqZ9mUQRx">
+                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/embed/fuve0wZ1TSk?si=SWxEWtx6qL2-GWfU" >
+                <img src="https://img.youtube.com/vi/fuve0wZ1TSk/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/embed/68svPrVW32E?si=2GXxUoMym5RVnPDf">
+                <img src="https://img.youtube.com/vi/68svPrVW32E/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/embed/cnSkObz-sgw?si=Wh-ScaVDbV7aw6m3">
+                <img src="https://img.youtube.com/vi/cnSkObz-sgw/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/embed/P2jc5wSdL54?si=Xi6rnESlhU5pWNXS&amp;controls=0">
+                <img src="https://img.youtube.com/vi/P2jc5wSdL54/maxresdefault.jpg" />
+            </a>
+        </div>
+   </section>
 
 </body>
 
