--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             <h1>RESUMO DE JUJUTSU KAISEN COMPLETO!</h1>
             <p>#jujutsu-kaisen</p>
         </div>
-    </section>
 
         <div>
             <iframe width="560" height="315" src="https://www.youtube.com/watch?v=SSFkyEdpfwM"
@@ -31,8 +30,8 @@
     <section class="categoria">
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/embed/SSFkyEdpfwM?si=SDkq0jcLqZ9mUQRx">
-                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/embed/SSFkyEdpfwM?si=3nvZeP9F4oeeYwE5">
+                <img src="https://img.youtube.com/vi/SSFkyEdpfwM/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/embed/fuve0wZ1TSk?si=SWxEWtx6qL2-GWfU" >
                 <img src="https://img.youtube.com/vi/fuve0wZ1TSk/maxresdefault.jpg" />
