--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a href="https://www.youtube.com/embed/cnSkObz-sgw?si=Wh-ScaVDbV7aw6m3">
                 <img src="https://img.youtube.com/vi/cnSkObz-sgw/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/embed/P2jc5wSdL54?si=Xi6rnESlhU5pWNXS&amp;controls=0">
+            <a href="https://www.youtube.com/embed/P2jc5wSdL54?si=0GAayhrJ1X024qd">
                 <img src="https://img.youtube.com/vi/P2jc5wSdL54/maxresdefault.jpg" />
             </a>
         </div>
